[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/calendar/CalendarUI.gd" type="Script" id=2]

[node name="CalendarUI" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.329412, 0.329412, 0.329412, 1 )
margin_right = 360.0
margin_bottom = 320.0

[node name="vbox" type="VBoxContainer" parent="Panel"]
margin_left = 8.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 313.0

[node name="hbox_month_year" type="HBoxContainer" parent="Panel/vbox"]
margin_right = 345.0
margin_bottom = 30.0
custom_constants/separation = 20
alignment = 1

[node name="button_prev_month" type="Button" parent="Panel/vbox/hbox_month_year"]
margin_left = 44.0
margin_right = 70.0
margin_bottom = 30.0
text = " < "

[node name="button_prev_year" type="Button" parent="Panel/vbox/hbox_month_year"]
margin_left = 90.0
margin_right = 124.0
margin_bottom = 30.0
text = " << "

[node name="label_month_year" type="Label" parent="Panel/vbox/hbox_month_year"]
margin_left = 144.0
margin_top = 3.0
margin_right = 201.0
margin_bottom = 27.0
text = "Jan 1900"
align = 1
valign = 1

[node name="button_next_year" type="Button" parent="Panel/vbox/hbox_month_year"]
margin_left = 221.0
margin_right = 255.0
margin_bottom = 30.0
text = " >> "

[node name="button_next_month" type="Button" parent="Panel/vbox/hbox_month_year"]
margin_left = 275.0
margin_right = 301.0
margin_bottom = 30.0
text = " > "

[node name="hbox_label_days" type="GridContainer" parent="Panel/vbox"]
margin_top = 34.0
margin_right = 345.0
margin_bottom = 64.0
custom_constants/hseparation = 10
columns = 7

[node name="label_sunday" type="Label" parent="Panel/vbox/hbox_label_days"]
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
text = "Sun"
align = 1
valign = 1

[node name="label_monday" type="Label" parent="Panel/vbox/hbox_label_days"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
text = "Mon"
align = 1
valign = 1

[node name="label_thuesday" type="Label" parent="Panel/vbox/hbox_label_days"]
margin_left = 100.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
text = "Tue"
align = 1
valign = 1

[node name="label_wednesday" type="Label" parent="Panel/vbox/hbox_label_days"]
margin_left = 150.0
margin_right = 190.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
text = "Wed"
align = 1
valign = 1

[node name="label_thursday" type="Label" parent="Panel/vbox/hbox_label_days"]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
text = "Thu"
align = 1
valign = 1

[node name="label_friday" type="Label" parent="Panel/vbox/hbox_label_days"]
margin_left = 250.0
margin_right = 290.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
text = "Fri"
align = 1
valign = 1

[node name="label_saturday" type="Label" parent="Panel/vbox/hbox_label_days"]
margin_left = 300.0
margin_right = 340.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
text = "Sat"
align = 1
valign = 1

[node name="hbox_days" type="GridContainer" parent="Panel/vbox"]
margin_top = 68.0
margin_right = 345.0
margin_bottom = 295.0
custom_constants/vseparation = 7
custom_constants/hseparation = 10
columns = 7

[node name="btn_0" type="Button" parent="Panel/vbox/hbox_days"]
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_1" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_2" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 100.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_3" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 150.0
margin_right = 190.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_4" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_5" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 250.0
margin_right = 290.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_6" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 300.0
margin_right = 340.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_7" type="Button" parent="Panel/vbox/hbox_days"]
margin_top = 39.0
margin_right = 40.0
margin_bottom = 71.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_8" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 50.0
margin_top = 39.0
margin_right = 90.0
margin_bottom = 71.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_9" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 100.0
margin_top = 39.0
margin_right = 140.0
margin_bottom = 71.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_10" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 150.0
margin_top = 39.0
margin_right = 190.0
margin_bottom = 71.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_11" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 200.0
margin_top = 39.0
margin_right = 240.0
margin_bottom = 71.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_12" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 250.0
margin_top = 39.0
margin_right = 290.0
margin_bottom = 71.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_13" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 300.0
margin_top = 39.0
margin_right = 340.0
margin_bottom = 71.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_14" type="Button" parent="Panel/vbox/hbox_days"]
margin_top = 78.0
margin_right = 40.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_15" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 50.0
margin_top = 78.0
margin_right = 90.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_16" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 100.0
margin_top = 78.0
margin_right = 140.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_17" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 150.0
margin_top = 78.0
margin_right = 190.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_18" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 200.0
margin_top = 78.0
margin_right = 240.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_19" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 250.0
margin_top = 78.0
margin_right = 290.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_20" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 300.0
margin_top = 78.0
margin_right = 340.0
margin_bottom = 110.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_21" type="Button" parent="Panel/vbox/hbox_days"]
margin_top = 117.0
margin_right = 40.0
margin_bottom = 149.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_22" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 50.0
margin_top = 117.0
margin_right = 90.0
margin_bottom = 149.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_23" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 100.0
margin_top = 117.0
margin_right = 140.0
margin_bottom = 149.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_24" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 150.0
margin_top = 117.0
margin_right = 190.0
margin_bottom = 149.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_25" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 200.0
margin_top = 117.0
margin_right = 240.0
margin_bottom = 149.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_26" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 250.0
margin_top = 117.0
margin_right = 290.0
margin_bottom = 149.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_27" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 300.0
margin_top = 117.0
margin_right = 340.0
margin_bottom = 149.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_28" type="Button" parent="Panel/vbox/hbox_days"]
margin_top = 156.0
margin_right = 40.0
margin_bottom = 188.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_29" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 50.0
margin_top = 156.0
margin_right = 90.0
margin_bottom = 188.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_30" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 100.0
margin_top = 156.0
margin_right = 140.0
margin_bottom = 188.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_31" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 150.0
margin_top = 156.0
margin_right = 190.0
margin_bottom = 188.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_32" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 200.0
margin_top = 156.0
margin_right = 240.0
margin_bottom = 188.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_33" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 250.0
margin_top = 156.0
margin_right = 290.0
margin_bottom = 188.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_34" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 300.0
margin_top = 156.0
margin_right = 340.0
margin_bottom = 188.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_35" type="Button" parent="Panel/vbox/hbox_days"]
margin_top = 195.0
margin_right = 40.0
margin_bottom = 227.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_36" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 50.0
margin_top = 195.0
margin_right = 90.0
margin_bottom = 227.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_37" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 100.0
margin_top = 195.0
margin_right = 140.0
margin_bottom = 227.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_38" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 150.0
margin_top = 195.0
margin_right = 190.0
margin_bottom = 227.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_39" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 200.0
margin_top = 195.0
margin_right = 240.0
margin_bottom = 227.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_40" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 250.0
margin_top = 195.0
margin_right = 290.0
margin_bottom = 227.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"

[node name="btn_41" type="Button" parent="Panel/vbox/hbox_days"]
margin_left = 300.0
margin_top = 195.0
margin_right = 340.0
margin_bottom = 227.0
rect_min_size = Vector2( 40, 32 )
disabled = true
text = "99"
